fix: align hamburger menu to center

--- a/style.css
+++ b/style.css
@@ -172,8 +172,9 @@ nav {
         position: absolute;
         top: 100%;
         left: 0; 
-         width: 100%;
-         padding: 1rem;
+        width: 100%;
+        padding: 1rem;
+        padding-left: 0;
         box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         z-index: 1000;
         background: rgba(0, 0, 0, 0.9); 
@@ -192,6 +193,9 @@ nav {
 
     .nav-item {
         margin: 10px 0;
+    }
+
+    #navScores {
         padding: 0;
     }
 }
